reduce fixed header transparency and fixed the gap for active tab
Former-commit-id: 84396acf8de14d19f6a5058aed228532a8a6845b

--- a/stylesheets/_nav.scss
+++ b/stylesheets/_nav.scss
@@ -17,7 +17,7 @@
 
     &.fixed {
       position: fixed;
-      background-color: rgba(255,255,255,.9);
+      background-color: rgba(255,255,255,.95);
       z-index: 99999;
     }
 
@@ -36,7 +36,7 @@
           padding-left: 200px;
           li {
             a {
-              padding: 4px 0 18px 0;
+              padding: 4px 0 20px 0;
             }
           }
         }
